--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,7 @@
   },
   "hosting": {
     "site": "limitless19",
-    "public": "web",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
