--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,10 @@ dependencies:
   dartz: ^0.8.9
   font_awesome_flutter: ^8.7.0
   animated_text_kit: ^1.3.0
-
+  cloud_firestore: ^0.13.4+1
+  firebase_core: ^0.4.0+9
+  cached_network_image: ^2.0.0
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
@@ -36,17 +39,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
+  # To add assets to your application, add an assets section, like this
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  # https://flutter.dev/assetsj-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
