--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   firebase_core: ^0.4.0+9
   cached_network_image: ^2.0.0
   url_launcher: ^5.4.2
+  palette_generator: ^0.2.0
+
 
 dev_dependencies:
   flutter_test:
