--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cached_network_image: ^2.0.0
   url_launcher: ^5.4.2
   palette_generator: ^0.2.0
+  after_layout: ^1.0.7+2
 
 
 dev_dependencies:
